SERVER-31804 Disable $expr rewrite optimization

To address correctness issues involving comparison of:
- BSONType
- null & undefined
- NaN
- Arrays